--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>TesteCrudRest</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>TesteCrudRest Maven Webapp</name>
+	<name>Aula Prática</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
 
